# servant-swagger

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  Setup.lhs  cabal.haskell-ci  cabal.project  install-hspec-discover.sh  servant-swagger.cabal  stack-ghc-7.10.yaml  stack-ghc-7.8.yaml  stack-ghc-8.0.yaml  stack-ghc8.yaml  stack-lts-2.yaml  stack-servant-0.4.yaml  stack.yaml  swagger.cabal
.github/workflows/: haskell.yml
example/: File.hs  Main.hs  README.lhs  Server.hs  example.cabal  swagger.json
example/src/: Todo.hs
example/test/: TodoSpec.hs
haddock/: Servant-Swagger-Internal-Test.html  Servant-Swagger-Internal-TypeLevel-API.html  Servant-Swagger-Internal-TypeLevel-Every.html  Servant-Swagger-Internal-TypeLevel-TMap.html  Servant-Swagger-Internal-TypeLevel.html  Servant-Swagger-Internal.html  Servant-Swagger-Test.html  Servant-Swagger-TypeLevel.html  Servant-Swagger.html  doc-index.html  index-frames.html  index.html  mini_Servant-Swagger-Internal-Test.html  mini_Servant-Swagger-Internal-TypeLevel-API.html  mini_Servant-Swagger-Internal-TypeLevel-Every.html  mini_Servant-Swagger-Internal-TypeLevel-TMap.html  mini_Servant-Swagger-Internal-TypeLevel.html  mini_Servant-Swagger-Internal.html  mini_Servant-Swagger-Test.html  mini_Servant-Swagger-TypeLevel.html  mini_Servant-Swagger.html  servant-swagger.haddock  servant-swagger.txt
haddock/src/: Servant-Swagger-Internal-Test.html  Servant-Swagger-Internal-TypeLevel-API.html  Servant-Swagger-Internal-TypeLevel-Every.html  Servant-Swagger-Internal-TypeLevel-TMap.html  Servant-Swagger-Internal-TypeLevel.html  Servant-Swagger-Internal.html  Servant-Swagger-Test.html  Servant-Swagger-TypeLevel.html  Servant-Swagger.html
src/: Swagger.hs
src/Servant/: Swagger.hs  Swagger.hs~
src/Servant/Swagger/: Internal.hs  Internal.hs~  Test.hs  TypeLevel.hs
src/Servant/Swagger/Internal/: Orphans.hs  Test.hs  TypeLevel.hs
src/Servant/Swagger/Internal/TypeLevel/: API.hs  Every.hs  TMap.hs
src/Swagger/: Internal.hs  Internal.hs~
test/: DocTest.hs  doctests.hsc
test/Data/Aeson/QQ/: Simple.hs  Simple2.hs
test/Servant/: SwaggerSpec.hs
