name:                servant-swagger
version:             1.1.3
x-revision:          1
synopsis:            Generate Swagger specification for your servant API.
description:         Please see README.md
homepage:            https://github.com/haskell-servant/servant-swagger
bug-reports:         https://github.com/haskell-servant/servant-swagger/issues
license:             BSD3
license-file:        LICENSE
author:              David Johnson, Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           (c) 2015-2016, Servant contributors
category:            Web
build-type:          Custom
cabal-version:       >=1.10
tested-with:
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.1
extra-source-files:
    README.md
  , CHANGELOG.md
  , example/server/*.hs
  , example/src/*.hs
  , example/test/*.hs
  , example/*.cabal
  , example/swagger.json
  , example/LICENSE
extra-doc-files:
    example/src/*.hs
  , example/test/*.hs

source-repository head
  type:     git
  location: https://github.com/haskell-servant/servant-swagger.git

custom-setup
  setup-depends:
    base >=4.7 && <4.11,
    Cabal >= 1.18 && <2.1,
    cabal-doctest >=1.0.2 && <1.1

library
  ghc-options:         -Wall
  exposed-modules:
    Servant.Swagger
    Servant.Swagger.Test
    Servant.Swagger.TypeLevel

    -- Internal modules
    Servant.Swagger.Internal
    Servant.Swagger.Internal.Test
    Servant.Swagger.Internal.TypeLevel
    Servant.Swagger.Internal.TypeLevel.API
    Servant.Swagger.Internal.TypeLevel.Every
    Servant.Swagger.Internal.TypeLevel.TMap
  hs-source-dirs:      src
  build-depends:       aeson                     >=0.11.2.0 && <1.3
                     , base                      >=4.7.0.0  && <4.11
                     , bytestring                >=0.10.4.0 && <0.11
                     , http-media                >=0.6.3    && <0.8
                     , insert-ordered-containers >=0.1.0.0  && <0.3
                     , lens                      >=4.7.0.1  && <4.16
                     , servant                   >=0.5      && <0.12
                     , swagger2                  >=2.1      && <2.2
                     , text                      >=1.2.0.6  && <1.3
                     , unordered-containers      >=0.2.5.1  && <0.3

                     , hspec
                     , QuickCheck
  default-language:    Haskell2010

test-suite doctests
  ghc-options:      -Wall
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.11.1 && <0.12,
    servant >= 0.10,
    QuickCheck,
    filepath
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          doctests.hs
  type:             exitcode-stdio-1.0

test-suite spec
  ghc-options:      -Wall
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    base
                  , aeson
                  , aeson-qq >=0.8.1
                  , hspec
                  , QuickCheck
                  , lens
                  , servant >= 0.10
                  , servant-swagger
                  , swagger2
                  , text
                  , time
  other-modules:
    Servant.SwaggerSpec
  default-language: Haskell2010
