name:                servant-swagger
version:             1.1.5
x-revision:          2
synopsis:            Generate Swagger specification for your servant API.
description:
  Swagger™ is a project used to describe and document RESTful APIs.
  Unlike Servant it is language-agnostic and thus is quite popular among developers
  in different languages. It also exists for a longer time and has more tools to work with.
  .
  This package provides means to generate Swagger specification for a Servant API
  and also to partially test whether API conforms with its specification.
  .
  Generated Swagger specification then can be used for many things such as
  .
  * displaying interactive documentation using [Swagger UI](http://swagger.io/swagger-ui/);
  .
  * generating clients and servers in many languages using [Swagger Codegen](http://swagger.io/swagger-codegen/);
  .
  * and [many others](http://swagger.io/open-source-integrations/).
homepage:            https://github.com/haskell-servant/servant-swagger
bug-reports:         https://github.com/haskell-servant/servant-swagger/issues
license:             BSD3
license-file:        LICENSE
author:              David Johnson, Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           (c) 2015-2018, Servant contributors
category:            Web, Servant, Swagger
build-type:          Custom
cabal-version:       1.18
tested-with:
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.3

extra-source-files:
    README.md
  , CHANGELOG.md
  , example/server/*.hs
  , example/src/*.hs
  , example/test/*.hs
  , example/*.cabal
  , example/swagger.json
  , example/LICENSE
extra-doc-files:
    example/src/*.hs
  , example/test/*.hs

source-repository head
  type:     git
  location: https://github.com/haskell-servant/servant-swagger.git

custom-setup
  setup-depends:
    base >=4.7 && <4.12,
    Cabal >= 1.18 && <2.3,
    cabal-doctest >=1.0.2 && <1.1

library
  ghc-options:         -Wall
  exposed-modules:
    Servant.Swagger
    Servant.Swagger.Test
    Servant.Swagger.TypeLevel

    -- Internal modules
    Servant.Swagger.Internal
    Servant.Swagger.Internal.Test
    Servant.Swagger.Internal.TypeLevel
    Servant.Swagger.Internal.TypeLevel.API
    Servant.Swagger.Internal.TypeLevel.Every
    Servant.Swagger.Internal.TypeLevel.TMap
  hs-source-dirs:      src
  build-depends:       aeson                     >=0.11.2.0 && <1.5
                     , base                      >=4.7.0.0  && <4.12
                     , bytestring                >=0.10.4.0 && <0.11
                     , http-media                >=0.6.3    && <0.8
                     , insert-ordered-containers >=0.1.0.0  && <0.3
                     , lens                      >=4.7.0.1  && <4.17
                     , servant                   >=0.13     && <0.14
                     , singleton-bool            >=0.1.3    && <0.2
                     , swagger2                  >=2.1      && <2.3
                     , text                      >=1.2.0.6  && <1.3
                     , unordered-containers      >=0.2.5.1  && <0.3

                     , hspec
                     , QuickCheck
  default-language:    Haskell2010

test-suite doctests
  ghc-options:      -Wall
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.11.1 && <0.16,
    servant,
    QuickCheck,
    filepath
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          doctests.hs
  type:             exitcode-stdio-1.0

test-suite spec
  ghc-options:      -Wall
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:    base
                  , aeson
                  , aeson-qq >=0.8.1
                  , hspec
                  , QuickCheck
                  , lens
                  , servant
                  , servant-swagger
                  , swagger2
                  , text
                  , time
  other-modules:
    Servant.SwaggerSpec
  default-language: Haskell2010
