name:                swagger
version:             0.1.0.0
synopsis:            Swagger 
description:         Swagger 
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2015-2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10
                     
library
  ghc-options:         -Wall
  exposed-modules:     Swagger
  other-modules:       Swagger.Internal
  hs-source-dirs:      src
  build-depends:       aeson
                     , base >=4.7 && <5
                     , bytestring
                     , hashable
                     , text
                     , unordered-containers
  default-language:    Haskell2010
