name:                example
version:             0.1.0.0
synopsis:            Example usage
description:         Example usage
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2015-2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable swagger-server
  main-is: Server.hs
  build-depends:
                    base
                , aeson
                , bytestring == 0.10.*
                , servant
                , either
                , servant-server
                , servant-swagger
                , swagger2
                , lens
                , wai
                , warp
  default-language: Haskell2010

executable swagger-file
  main-is: File.hs
  build-depends:
                    base
                , aeson
                , bytestring == 0.10.*
                , servant
                , swagger2
                , either
                , servant-server
                , servant-swagger
                , lens
  default-language: Haskell2010

executable readme
  main-is:             README.lhs
  ghc-options:         -Wall -pgmL markdown-unlit
  build-depends:       base >=4.7 && <4.9
                     , aeson
                     , bytestring
                     , lens
                     , markdown-unlit
                     , servant-server
                     , servant-swagger
                     , swagger2
  default-language:    Haskell2010
