name:                example
version:             0.1.0.0
synopsis:            Example usage
description:         Example usage
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2015-2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:
  swagger.json

library
  ghc-options:      -Wall
  hs-source-dirs: src/
  exposed-modules:
    Todo
  build-depends:  base
                , aeson
                , lens
                , servant
                , servant-server
                , servant-swagger
                , swagger2
                , text
                , time
  default-language: Haskell2010

executable swagger-server
  ghc-options:      -Wall
  hs-source-dirs: server/
  main-is: Main.hs
  build-depends:  base
                , example
                , servant-server
                , warp
  default-language: Haskell2010

test-suite swagger-server-spec
  ghc-options:      -Wall
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    TodoSpec
    Paths_example
  build-depends:    base  == 4.*
                  , aeson
                  , bytestring
                  , example
                  , hspec
                  , servant-swagger
                  , QuickCheck
                  , quickcheck-instances
  default-language: Haskell2010

executable readme
  main-is:             README.lhs
  ghc-options:         -Wall -pgmL markdown-unlit
  build-depends:       base >=4.7 && <4.9
                     , aeson
                     , bytestring
                     , lens
                     , markdown-unlit
                     , servant-server
                     , servant-swagger
                     , swagger2
  default-language:    Haskell2010
